# bingo-bot

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: errors.rs  lib.rs
src/handlers/: giphy.rs  help.rs  howdy.rs  mod.rs  python.rs  rfc.rs  troutslap.rs
