[package]
name = "bingo-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
config = "0.11.0"
directories = "3.0.2"
fastrand = "1.5.0"
matrix-sdk = { version = "0.4.1", features = ["markdown"] }
mime = "0.3.16"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
sha2 = "0.9.8"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"], default-features = false }
tracing = "0.1.26"
tracing-subscriber = "0.2.21"
url = "2.2.2"
